# narrative-subcorpora

./: api.md  demo.ipynb  docs.md  events.json  pyproject.toml  readme.md  selection.ipynb
narrative_subcorpora/: __init__.py  active_learning.py  cli.py  corpus.py  diagnostics.py  embed.py  event.py  ingest.py  score.py
